landing page complete

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,5 +1,6 @@
 html{
     box-sizing: border-box;
+	scroll-behavior: smooth;
 }
 *, 
 *::before, 
@@ -13,18 +14,20 @@ body {
 
 
 body {
-	font-family: 'Fira Sans', sans-serif;
+	font-family: 'Inter', sans-serif;
 	font-weight: 400;
-	color: #fff;
-	font-size: 18px;
-	background-color: #171919;
-	// overflow-x: hidden;
+	color: #131313;
+	font-size: 14px;
+	line-height: 17px;
+	background-color: #fff;
+	overflow-x: hidden;
 }
 
 a {
 	display: inline-block;
 	text-decoration: none;
-	color: #fff;
+	color: #131313;
+	cursor: pointer;
 }
 
 ul,
@@ -32,6 +35,14 @@ li {
 	margin: 0;
 	padding: 0;
 	list-style: none;
+}
+h1, h3, h4, p {
+	margin: 0;
+}
+.container {
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 0px 10px;
 }
 
 .wrapper {
