--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,4 +1,478 @@
-@import "_fonts";
-@import "_global";
-@import "_vars";
+@import "global";
+@import "vars";
+@import "fonts";
 
+
+//start header
+
+.header__inner {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.logo__img {
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.menu {
+    width: 430px;
+    margin-right: 74px;
+}
+
+.menu__list {
+    display: flex;
+
+    li {
+        a {
+            padding: 42px 16px 41px 22px;
+            text-transform: uppercase;
+            transition: all .3s;
+
+            &:hover {
+                background-color: $main;
+                color: #fff;
+            }
+        }
+
+        &+li {
+            padding-left: 12px;
+        }
+
+    }
+}
+
+//end header
+
+//start section bike
+
+.bike {
+    padding: 100px 0px 150px;
+}
+
+.bike__inner {
+    display: flex;
+    justify-content: space-between;
+}
+
+.bike-info {
+    padding-top: 60px;
+}
+
+.bike-info__title {
+    font-size: 64px;
+    line-height: 77px;
+    font-weight: 700;
+}
+
+.bike-info__subtitle {
+    font-size: 32px;
+    line-height: 38px;
+    color: #6F6F6F;
+    padding-top: 5px;
+    padding-bottom: 60px;
+}
+
+.bike-info__text {
+    max-width: 420px;
+
+    &+.bike-info__text {
+        padding-top: 20px;
+    }
+}
+
+.bike__link {
+    display: inline-block;
+    margin-top: 80px;
+    text-transform: uppercase;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 1.1em;
+    color: #fff;
+    background-color: $main;
+    padding: 28px 81px;
+    transition: all .3s;
+
+    &:hover {
+        background-color: #FF4040;
+    }
+}
+
+.bike__slider-box {
+    flex-basis: 630px;
+    position: relative;
+    max-width: 630px;
+}
+
+
+.bike__slider-item {
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.bike__slider {
+    .slick-dots {
+        right: 0;
+    }
+}
+
+.slick-dots {
+    position: absolute;
+    top: 52px;
+
+    li+li {
+        padding-top: 10px;
+
+    }
+
+    li {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    button {
+        background-color: #131313;
+        padding: 0;
+        border: none;
+        font-size: 0;
+        width: 2px;
+        height: 25px;
+        border-radius: 7px;
+        cursor: pointer;
+        transform: all .3s;
+
+        &:hover {
+            background-color: #ff4040;
+        }
+
+    }
+
+    .slick-active {
+        button {
+            background-color: #ff4040;
+        }
+    }
+}
+
+.bike__list {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 6px;
+
+    &-item {
+        font-weight: 700;
+        text-transform: uppercase;
+        text-align: center;
+        min-width: 160px;
+
+        span {
+            display: block;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 15px;
+            text-transform: lowercase;
+            padding-top: 10px;
+        }
+    }
+}
+
+//end section bike
+
+//start section product-info
+
+.product-info {
+    padding-bottom: 150px;
+}
+
+.product-info__inner {
+    display: flex;
+
+}
+
+.product-info__img {
+    min-height: 1053px;
+    max-width: 570px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-right: 60px;
+}
+
+.product-info__description {
+    display: flex;
+    flex-direction: column;
+}
+
+.product-info__description-item {
+    &+.product-info__description-item {
+        margin-top: 50px;
+    }
+
+}
+
+.product-info__description-title {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    max-width: 490px;
+}
+
+.product-info__description-text {
+    max-width: 450px;
+}
+
+//end section product-info
+
+//start section characteristic
+
+.characteristic {
+    margin-bottom: 150px;
+}
+
+.characteristic__inner {
+    display: flex;
+}
+
+
+.characteristic-img {
+    align-self: center;
+}
+
+
+.characteristic__title {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    margin-bottom: 40px;
+    text-transform: uppercase;
+}
+
+.characteristic__item {
+    width: 570px;
+    margin-right: 60px;
+
+    &+.characteristic__item {
+        padding-top: 30px;
+    }
+}
+
+.characteristic__list-title {
+    font-weight: 700;
+    background-color: $main;
+    text-transform: uppercase;
+    color: #fff;
+    padding: 2px 0 3px;
+}
+
+.characteristic__list-line {
+    display: flex;
+    padding-top: 5px;
+}
+
+.characteristic__list-description,
+.characteristic__list-name {
+    flex-basis: 285px;
+}
+
+.characteristic__list-name {
+    padding-right: 25px;
+}
+
+//end section characteristic
+
+//start section slider 
+
+.slider {
+    margin-bottom: 50px;
+}
+
+.slider__items {
+    .slick-dots {
+        top: 0;
+    }
+}
+
+.slider__item {
+    padding-left: 50px;
+
+}
+
+//end section slider 
+
+//start section order 
+
+.order {
+    margin-bottom: 100px;
+}
+
+.order__inner {
+    position: relative;
+}
+
+.order__form {
+    max-width: 420px;
+}
+
+.order__title {
+    text-transform: uppercase;
+    margin-bottom: 40px;
+}
+
+.order__form-info {
+    max-width: 300px;
+    margin-bottom: 30px;
+}
+
+.order__form-name,
+.order__form-tel {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid $main;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    outline: none;
+}
+
+.order__form-name::placeholder,
+.order__form-tel::placeholder,
+.order__form-text {
+    color: #6f6f6f;
+    opacity: 0.5;
+}
+
+.order__form-text {
+    margin-bottom: 10px;
+}
+
+.order__form-label {
+    display: flex;
+    margin-bottom: 50px;
+}
+
+.form-label+.form-label {
+    margin-left: 23px;
+}
+
+.order__form-radio {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+
+    &:checked+.order__form-bike {
+        display: block;
+    }
+}
+
+.order__form-bike {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: -40px;
+}
+
+.form__radio-style {
+    width: 80px;
+    height: 12px;
+    border-radius: 30px;
+
+}
+
+.form__bike-price {
+    width: 220px;
+    height: 100px;
+    text-align: center;
+    position: absolute;
+    left: -80px;
+    top: 15px;    
+    font-size: 32px;
+    line-height: 100px;
+    border: 1px solid #ff4040;
+    border-radius: 50%;
+    &::after {
+        content: "";
+        position: absolute;
+        width: 220px;
+        height: 100px;
+        border: 1px solid #ff4040;
+        border-radius: 50%;
+        left: 0px;
+        top: 12px;
+    }
+}
+
+.form__radio-style--grey {
+    background-color: #6f6f6f;
+}
+
+.form__radio-style--white {
+    background-color: #fff;
+    border: 1px solid #6f6f6f;
+}
+
+.form__radio-style--red {
+    background-color: #ff4040;
+}
+
+.order__form-btn {
+    width: 420px;
+    background-color: $main;
+    padding: 28px 81px;
+    border: none;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 1.1em;
+    cursor: pointer;
+    transition: all .3s;
+
+    &:hover {
+        background-color: #ff4040;
+    }
+}
+
+//end section order
+
+//start footer
+.footer {
+    background-color: $main;
+    
+}
+.footer__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+}
+
+.footer__link {
+    color: #fff;
+    text-decoration: underline;
+}
+
+.footer__social-link + .footer__social-link {
+    margin-left: 25px;
+}
+.footer__contacts {
+    font-size: 12px;
+    line-height: 15px;       
+    &-link {
+        color: #fff;
+        align-items: center;
+        display: flex;
+    }
+    
+}
+
+.footer__contacts-img {
+    margin-right: 10px;
+}
+
+.footer__contacts-link + .footer__contacts-link {
+    margin-top: 10px;
+}
+//end footer
